@@ -1,25 +1,33 @@
 package westmeijer.oskar.weatherapi.location.repository.mapper;
 
-import static net.bytebuddy.matcher.ElementMatchers.returns;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.within;
 
-import java.time.Instant;
-import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import java.util.UUID;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mapstruct.factory.Mappers;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.test.context.ContextConfiguration;
+import org.springframework.test.context.junit.jupiter.SpringExtension;
 import westmeijer.oskar.weatherapi.TestLocationFactory;
 import westmeijer.oskar.weatherapi.location.repository.model.LocationEntity;
 import westmeijer.oskar.weatherapi.location.service.model.Location;
+import westmeijer.oskar.weatherapi.weather.repository.mapper.WeatherEntityMapper;
+import westmeijer.oskar.weatherapi.weather.repository.mapper.WeatherEntityMapperImpl;
 
-
+@ExtendWith(SpringExtension.class)
+@ContextConfiguration(classes = {
+    WeatherEntityMapperImpl.class,
+    LocationEntityMapperImpl.class,
+})
 public class LocationEntityMapperTest {
 
-  private final LocationEntityMapper locationEntityMapper = Mappers.getMapper(LocationEntityMapper.class);
+  @Autowired
+  private LocationEntityMapper locationEntityMapper;
+
+  @Autowired
+  private WeatherEntityMapper weatherEntityMapper;
 
   @Test
   public void shouldMapToLocationWithoutWeather() {
@@ -29,6 +37,9 @@ public class LocationEntityMapperTest {
 
     assertThat(location)
         .returns(locationEntity.getId(), Location::getLocationId)
+        .returns(locationEntity.getUuid(), Location::getUuid)
+        .returns(locationEntity.getLatitude(), Location::getLatitude)
+        .returns(locationEntity.getLongitude(), Location::getLongitude)
         .returns(locationEntity.getOpenWeatherApiLocationCode(), Location::getOpenWeatherApiLocationCode)
         .returns(locationEntity.getLocalZipCode(), Location::getLocalZipCode)
         .returns(locationEntity.getCityName(), Location::getCityName)
@@ -40,41 +51,70 @@ public class LocationEntityMapperTest {
 
   @Test
   public void mapToLocationListWithoutWeather() {
-    LocationEntity luebeck = LocationEntity.builder()
-        .id(1)
-        .uuid(UUID.randomUUID())
-        .openWeatherApiLocationCode("2875601")
-        .localZipCode("23552")
-        .cityName("Lübeck")
-        .country("Germany")
-        .countryCode("GER")
-        .modifiedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
-        .lastImportAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
-        .latitude("1")
-        .longitude("2")
-        .weather(Collections.emptyList())
-        .build();
+    LocationEntity expectedLocation = TestLocationFactory.locationEntityWithoutWeather();
 
-    LocationEntity hamburg = LocationEntity.builder()
-        .id(2)
-        .uuid(UUID.randomUUID())
-        .openWeatherApiLocationCode("2911298")
-        .localZipCode("20095")
-        .cityName("Hamburg")
-        .country("Germany")
-        .countryCode("GER")
-        .modifiedAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
-        .lastImportAt(Instant.now().truncatedTo(ChronoUnit.MICROS))
-        .latitude("1")
-        .longitude("2")
-        .weather(Collections.emptyList())
-        .build();
+    List<Location> actualLocationList = locationEntityMapper.mapToLocationListWithoutWeather(List.of(expectedLocation));
 
-    List<Location> locations = locationEntityMapper.mapToLocationListWithoutWeather(List.of(luebeck, hamburg));
+    assertThat(actualLocationList).hasSize(1);
+    Location actualLocation = actualLocationList.get(0);
+    assertThat(actualLocation)
+        .returns(expectedLocation.getId(), Location::getLocationId)
+        .returns(expectedLocation.getUuid(), Location::getUuid)
+        .returns(expectedLocation.getLatitude(), Location::getLatitude)
+        .returns(expectedLocation.getLongitude(), Location::getLongitude)
+        .returns(expectedLocation.getOpenWeatherApiLocationCode(), Location::getOpenWeatherApiLocationCode)
+        .returns(expectedLocation.getLocalZipCode(), Location::getLocalZipCode)
+        .returns(expectedLocation.getCityName(), Location::getCityName)
+        .returns(expectedLocation.getCountry(), Location::getCountry)
+        .returns(expectedLocation.getCountryCode(), Location::getCountryCode)
+        .returns(expectedLocation.getLastImportAt(), Location::getLastImportAt);
 
-    assertThat(locations)
-        .hasSize(2);
-    // TODO: assert elements
+    assertThat(actualLocation.getWeather()).isEmpty();
+  }
+
+  @Test
+  public void shouldMapToLocation() {
+    LocationEntity expectedLocation = TestLocationFactory.locationEntity();
+
+    Location actualLocation = locationEntityMapper.mapToLocation(expectedLocation);
+
+    assertThat(actualLocation)
+        .returns(expectedLocation.getId(), Location::getLocationId)
+        .returns(expectedLocation.getUuid(), Location::getUuid)
+        .returns(expectedLocation.getLatitude(), Location::getLatitude)
+        .returns(expectedLocation.getLongitude(), Location::getLongitude)
+        .returns(expectedLocation.getOpenWeatherApiLocationCode(), Location::getOpenWeatherApiLocationCode)
+        .returns(expectedLocation.getLocalZipCode(), Location::getLocalZipCode)
+        .returns(expectedLocation.getCityName(), Location::getCityName)
+        .returns(expectedLocation.getCountry(), Location::getCountry)
+        .returns(expectedLocation.getCountryCode(), Location::getCountryCode)
+        .returns(expectedLocation.getLastImportAt(), Location::getLastImportAt);
+
+    assertThat(actualLocation.getWeather()).hasSize(1);
+  }
+
+  @Test
+  public void shouldMapToLocationList() {
+    LocationEntity expectedLocation = TestLocationFactory.locationEntity();
+
+    List<Location> actualLocationList = locationEntityMapper.mapToLocationList(List.of(expectedLocation));
+
+    assertThat(actualLocationList).hasSize(1);
+    Location actualLocation = actualLocationList.get(0);
+
+    assertThat(actualLocation)
+        .returns(expectedLocation.getId(), Location::getLocationId)
+        .returns(expectedLocation.getUuid(), Location::getUuid)
+        .returns(expectedLocation.getLatitude(), Location::getLatitude)
+        .returns(expectedLocation.getLongitude(), Location::getLongitude)
+        .returns(expectedLocation.getOpenWeatherApiLocationCode(), Location::getOpenWeatherApiLocationCode)
+        .returns(expectedLocation.getLocalZipCode(), Location::getLocalZipCode)
+        .returns(expectedLocation.getCityName(), Location::getCityName)
+        .returns(expectedLocation.getCountry(), Location::getCountry)
+        .returns(expectedLocation.getCountryCode(), Location::getCountryCode)
+        .returns(expectedLocation.getLastImportAt(), Location::getLastImportAt);
+
+    assertThat(actualLocation.getWeather()).hasSize(1);
   }
 
 }
